Test MacOS script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   codecov: codecov/codecov@3.0.0
+  mac-permissions: circleci/macos
 jobs:
   build:
     working_directory: /root/project/DataCurator.jl   # Clone into a directory whose name matches your Package.
@@ -22,3 +23,14 @@ jobs:
             PYTHON : "/usr/bin/python3"
       - run:
           command: julia -e 'using Pkg; cd(Pkg.dir("DataCurator")); using Coverage; Codecov.submit(Codecov.process_folder())'
+          
+
+  build-mac:
+    macos:
+      xcode: 14.2.0
+    steps:
+        - checkout
+        - run: echo 'chruby ruby-2.7' >> ~/.bash_profile
+        - mac-permissions/add-uitest-permissions
+        - run: bundle install
+        - run: bundle exec fastlane testandbuild          
