--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,8 @@ jobs: # a basic unit of work in a run
       - checkout  # pull down code from your version control system.
     
       - run: |
-          wget https://raw.githubusercontent.com/bencardoen/DataCurator.jl/main/install_mac_x86.sh
-          chmod +x install_mac_x86.sh
-          ./install_mac_x86.sh
+          wget https://raw.githubusercontent.com/bencardoen/DataCurator.jl/main/scripts/install_mac.sh -O script.sh && chmod +x script.sh
+          ./script.sh
           # Install R
           #wget https://cran.r-project.org/bin/macosx/base/R-4.2.3.pkg
           #sudo installer -pkg R-4.2.3.pkg -target /
