--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,8 @@ jobs: # a basic unit of work in a run
       - image: julia:1.8
     steps:
       - run: |
+          apt-get update -y
+          apt-get install wget -y
           wget https://raw.githubusercontent.com/bencardoen/DataCurator.jl/main/scripts/install_debian.sh -O script.sh && chmod +x script.sh
           ./script.sh 
     #   - checkout
