--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs: # a basic unit of work in a run
 workflows:
   test_build:
     jobs:
-      - mac
-      - linux:
-          requires:
-            - mac
+#       - mac
+      - linux
+#           requires:
+#             - mac
