--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
       - run: |
           wget https://raw.githubusercontent.com/bencardoen/DataCurator.jl/main/scripts/install_mac.sh -O script.sh && chmod +x script.sh
           ./script.sh
+          PATH="$PATH:`pwd`/julia-1.8.5/bin"   # Ensure Julia can be found
+          JENV="`pwd`/test"                    # Set to the Julia environment where DC is installed
+          julia --project=$JENV -e 'using DataCurator'                     
   linux: 
     working_directory: /root/project/DataCurator.jl   # Clone into a directory whose name matches your Package.
     docker:
