--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,11 @@ jobs:
           wget https://raw.githubusercontent.com/bencardoen/DataCurator.jl/main/scripts/install_mac.sh -O script.sh && chmod +x script.sh
           ./script.sh
           PATH="$PATH:`pwd`/julia-1.8.5/bin"   # Ensure Julia can be found
-          JENV="`pwd`/test"                    # Set to the Julia environment where DC is installed
-          julia --project=$JENV -e 'using DataCurator'                     
+          #JENV="`pwd`"                        # Set to the Julia environment where DC is installed
+          pwd
+          cd 
+          cd test
+          julia --project=. -e 'using DataCurator'                     
   linux: 
     working_directory: /root/project/DataCurator.jl   # Clone into a directory whose name matches your Package.
     docker:
@@ -26,6 +29,7 @@ jobs:
           ./script.sh 
           # Check that script worked
           PATH="/opt/julia-1.8.5/bin:$PATH"
+          JULIA_DEPOT_PATH=/opt/juliadepot
           julia -e 'using DataCurator'
 
           
