--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "DataCurator"
 uuid = "dc8f3b54-baf0-491e-b310-4cc607c077ab"
 authors = ["Ben Cardoen <26388277+bencardoen@users.noreply.github.com> and contributors"]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
@@ -30,6 +30,7 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Slack = "40bba58d-c7f1-4fe3-926e-2f246c890c3c"
 SlurmMonitor = "e02b837c-d203-40fc-8e6b-ea2c0c38557b"
