--- a/example_recipes/coloc_and_align.toml
+++ b/example_recipes/coloc_and_align.toml
@@ -4,4 +4,10 @@ inputdirectory = "testdir"
 [any]
 all=true
 conditions = ["is_dir"]
-actions=[["smlm_alignment",".csv", "is_thunderstorm", 500], ["image_colocalization", 3, "C[1,2].tif", "is_2d_img", "filter"]]
+# This recipe will be executed on CSV files organized per directory
+# It will load SMLM CSV data, do temporal alignment and save the result
+# Next, colocalization will be run on the resulting 2D images
+# 500 = max distance between fiducials
+# 4 = max number of fiducials to use
+# 3 refers to the window size to use in colocalization
+actions=[["smlm_alignment",".csv", "is_thunderstorm", 500, 4], ["image_colocalization", 3, "C[1,2].tif", "is_2d_img", "filter"]]
