--- a/example_recipes/coloc_and_align_gsd.toml
+++ b/example_recipes/coloc_and_align_gsd.toml
@@ -7,4 +7,8 @@ all=true
 conditions = ["is_dir"]
 # For each directory, find matching GSD files, do temporal and cross channel alignment, and then do colocalization on the results.
 # Saves output in place
-actions=[["smlm_alignment",".bin", "is_gsd", 500], ["image_colocalization", 3, "C[1,2].tif", "is_2d_img", "filter"]]
+# Next, colocalization will be run on the resulting 2D images
+# 500 = max distance between fiducials
+# 4 = max number of fiducials to use
+# 3 refers to the window size to use in colocalization
+actions=[["smlm_alignment",".bin", "is_gsd", 500, 4], ["image_colocalization", 3, "C[1,2].tif", "is_2d_img", "filter"]]
