--- a/example_recipes/aggregate_new_api.toml
+++ b/example_recipes/aggregate_new_api.toml
@@ -6,3 +6,7 @@ inputdirectory = "testdir"
 all=true
 conditions = ["is_csv_file"]
 actions=[["add_to_file_list", "table"]]
+
+
+#  transformer=["extract_columns", ["x1"]],
+#  for each dataframe, only select column "X1"
