--- a/example_recipes/describefiles.toml
+++ b/example_recipes/describefiles.toml
@@ -1,3 +1,4 @@
+#this recipe computes the sizes of files in KB and records the results to a single csv table
 [global]
 act_on_success=true
 inputdirectory = "testdir"
