--- a/example_recipes/dataframefilter.toml
+++ b/example_recipes/dataframefilter.toml
@@ -4,4 +4,4 @@ inputdirectory = "testdir"
 [any]
 all=true
 conditions=["is_csv_file"]
-actions=[{name_transform=[["prefixfilename", "filtered"]], content_transform=[["extract", [["z [nm]", "mode", [-1, 1]], ["uncertainty [nm]", "<", 15]]]], mode="inplace"}]
+actions=[{name_transform=[["prefixfilename", "filtered"]], content_transform=[["extract_any", [["x1", "<", 0.5], ["x2", ">", 0.5]], ["x1"]]], mode="copy"}]
