Test new feature

--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,9 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
+ERGO = "273a6d5c-81ba-41a9-bdcb-eb98fb5b048d"
 EllipsisNotation = "da5c29d0-fa7d-589e-88eb-ea29b0a81949"
+Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 IOCapture = "b5f81e59-6552-4d32-b1f0-c071b021bf89"
@@ -32,6 +34,7 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SPECHT = "9bf52c6b-c98d-48f8-80c6-8dab0ddc382a"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Slack = "40bba58d-c7f1-4fe3-926e-2f246c890c3c"
 SlurmMonitor = "e02b837c-d203-40fc-8e6b-ea2c0c38557b"
