--- a/example_recipes/ermito.toml
+++ b/example_recipes/ermito.toml
@@ -1,6 +1,9 @@
+# This recipe looks for folders that have tif image files (3), ending with 0.tif, 1.tif, and 2.tif
+# It then does a z-thresholding on channel 1 and channel 2, saves the masks, and maskes the 3rd channel where mask 1 and mask 2 are not both positive. 
+# In other words, only keep pixels where channel 1 and 2 overlap.
 [global]
 act_on_success=true
-inputdirectory = "/tmp/testdir"
+inputdirectory = "testdir"
 [any]
 all=true
 conditions = ["is_dir"]
